@@ -1,5 +1,7 @@
 Revision history for Perl extension Set::Infinite.
 
+- easier syntax to iterate()
+
 0.59    2004-07-01
 - added experimental argument "backtrack_callback" to
   iterate()
